Changes task runner to Gulp Rewrote code using ES6 syntax

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <!--
   ~ The MIT License (MIT)
   ~
-  ~ Copyright (c) 2015 Karl STEIN
+  ~ Copyright (c) 2017 Karl STEIN
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -28,7 +28,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Session.js</title>
-    <script src="../src/session.js"></script>
+    <script src="../src/js/session.js"></script>
 </head>
 <body>
 
